add security filter chain with an user in memory